syntax = "proto3";

package mystiko.data_packer.v1;

enum CommitmentStatus {
  Commitment_STATUS_QUEUED = 0;
  Commitment_STATUS_INCLUDED = 1;
}

message Commitment {
  bytes commitment_hash = 1;
  CommitmentStatus status = 2;
  optional uint64 leaf_index = 3;
  optional bytes rollup_fee = 4;
  optional bytes encrypted_note = 5;
  optional bytes creation_transaction_hash = 6;
  optional bytes rollup_transaction_hash = 7;
}



